<resources>
    <string name="app_name">My Demo</string>
    <string name="yellow">Yellow</string>
    <string name="verd">Verde</string>
    <string name="azul">Azul</string>
    <string name="alpa">Alpha</string>
    <string name="rojo">Rojo</string>
    <string name="Transparent">Transparente</string>
    <string name="Semitransparent">Semi Transparente</string>
    <string name="Opaque">Opaco</string>
    <string name="Black">Negro</string>
    <string name="White">Blanco</string>
    <string name="Red">Rojo</string>
    <string name="Green">Verde</string>
    <string name="Blue">Azul</string>
    <string name="Cyan">Cian</string>
    <string name="Magenta">Magenta</string>
    <string name="Yellow">Amarillo</string>
    <string name="Presentedby"><b>PRESENTADO POR:</b></string>
    <string name="title_activity_presented_by">PresentedByActivity</string>
    <string name="unicaldas">Universidad de Caldas</string>
    <string name="userpre">Yesid A. Maya J.</string>
    <string name="Presentedby_presented">Presentado Por</string>
</resources>
