<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.mydemo.view.PresentedByActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:background="@drawable/doctorfondo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margintoppreby">
                <TextView
                    android:id="@+id/uniprepor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unicaldas"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/texsizename"/>
                <TextView
                    android:id="@+id/userPrePor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Presentedby_presented"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsixepre"/>
                <TextView
                    android:id="@+id/userPre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/userpre"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/texsizename"/>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>


