<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.mydemo.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/black"
        android:padding="@dimen/paddingprin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinerLayout_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/LInerLayoutlayout_margin"
                android:layout_marginBottom="@dimen/LInerLayoutlayout_margin">
                <TextView
                    android:layout_width="@dimen/width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSize"
                    android:textColor="@android:color/white"
                    android:text="@string/rojo"/>
                <SeekBar
                    android:id="@+id/redid"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:max="255"
                    android:progress="128"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinerLayout_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/LInerLayoutlayout_margin"
                android:layout_marginBottom="@dimen/LInerLayoutlayout_margin">
                <TextView
                    android:layout_width="@dimen/width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSize"
                    android:textColor="@android:color/white"
                    android:text="@string/verd"/>
                <SeekBar
                    android:id="@+id/grenid"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:max="255"
                    android:progress="128"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinerLayout_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/LInerLayoutlayout_margin"
                android:layout_marginBottom="@dimen/LInerLayoutlayout_margin">
                <TextView
                    android:layout_width="@dimen/width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSize"
                    android:textColor="@android:color/white"
                    android:text="@string/azul"/>
                <SeekBar
                    android:id="@+id/blueid"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:max="255"
                    android:progress="128"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinerLayout_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/LInerLayoutlayout_margin"
                android:layout_marginBottom="@dimen/LInerLayoutlayout_margin">
                <TextView
                    android:layout_width="@dimen/width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/alpa"/>
                <SeekBar
                    android:id="@+id/alphaid"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:max="255"
                    android:progress="128"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margTop">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:background="@mipmap/doctor1"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/resultColors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80808080"/>
        </FrameLayout>
    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
